--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,367 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>MUSEUM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body  class="page page--with-menu">
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="header"></header>
+
+    <div class="top-bar">
+      <div class="container">
+        <div class="wrapper">
+          <div class="top-bar__item">
+            <a href="#menu" class="top-bar__menu"></a>
+            <a href="#" class="top-bar__logo">NA <br> MU</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__ghp">
+        <div class="container">
+          <div class="wrapper">
+            <div class="menu__content">
+              <div class="menu__top">
+                <a href="#" class="menu__icon"></a>
+                <nav class="menu__nav nav">
+                  <ol class="nav__content">
+                    <ul class="nav__list">
+                      <li class="nav__item">
+                        <a class="nav__link" href="#galery">Галерея</a>
+                      </li>
+                      <li class="nav__item">
+                        <a class="nav__link" href="#lection">Виставки та <br> події</a>
+                      </li>
+                    </ul>
+                    <ul class="nav__list">
+                      <li class="nav__item">
+                        <a class="nav__link" href="#subscribe">Про Hac</a>
+                      </li>
+                      <li class="nav__item">
+                        <a class="nav__link" href="#contucts">Контакти</a>
+                      </li>
+                    </ul>
+                  </ol>
+                </nav>
+              </div>
+              <hr class="menu__line">
+              <div class="menu__bottom bottom">
+                <p class="bottom__tittle">
+                  Графік роботи
+                </p>
+                <div class="bottom__item">
+                  <div class="bottom__content">
+                    <ul class="bottom__schedual schedual">
+                      <li class="bottom__time">12:00 — 20:00 <span class="schedual__day">середа</span> </li>
+                      <li class="bottom__time">12:00 — 20:00 <span class="schedual__day">четвер</span> </li>
+                      <li class="bottom__time">12:00 — 20:00 <span class="schedual__day">п’ятниця</span></li>
+                      <li class="bottom__time">11:00 — 19:00 <span class="schedual__day">субота</span> </li>
+                      <li class="bottom__time">11:00 — 19:00 <span class="schedual__day">неділя</span> </li>
+                    </ul>
+                  </div>
+                  <p class="bottom__subtittle subtittle"> <span class="subtittle__add">Вихідні: </span>понеділок, вівторок <br> Kaca припиняє роботу за 1 годину до закриття музею</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__dark-bg"></div>
+    </aside>
+
+    <section class="museum">
+      <div class="container">
+        <div class="wrapper">
+          <div class="museum__content">
+            <h1 class="museum__tittle">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a href="#ivents" class="museum__button">
+              <p class="museum__button--tittle">КВИТКИ</p>
+              <div class="museum__button--arrow"></div>
+            </a>
+            <div class="museum__link">
+              <a href="#ivents" class="museum__word">ПОДІЇ</a>
+              <div class="museum__line"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <main class="maain">
+      <div class="main__content">
+        <section class="ivents" id="ivents">
+          <div class="container">
+            <div class="wrapper">
+              <div class="ivents__content">
+                <h2 class="ivents__tittle">Актуальні події</h2>
+                <article class="ivents__card card">
+                  <img
+                    src="images/ivents/photo-1.jpg"
+                    alt="Photo"
+                    class="card__photo"
+                  >
+                  <div class="card__item">
+                    <div class="card__info info">
+                      <p class="card__name">ВИСТАВКА</p>
+                      <p class="card__date">26.08-29.11.2019</p>
+                    </div>
+                    <div class="card__wrapper">
+                      <h3 class="card__tittle">
+                        Йду i повертаюсь
+                      </h3>
+                      <img
+                        class="card__img"
+                        src="images/ivents/Rectangle.png"
+                        alt="Rectangle"
+                      >
+                    </div>
+                    <p class="card__description">
+                      Національний Художній Музей України презентує
+                      унікальну частину колекції Градобанку - українське
+                      мистецтво другої половини 1980-1995 років.
+                    </p>
+                  </div>
+                </article>
+                <article class="ivents__card card">
+                  <img
+                    src="images/ivents/photo-2.jpg"
+                    alt="Photo"
+                    class="card__photo"
+                  >
+                  <div class="card__item">
+                    <div class="card__info info">
+                      <p class="card__name">ВИСТАВКА</p>
+                      <p class="card__date">26.08-29.11.2019</p>
+                    </div>
+                    <div class="card__wrapper">
+                      <h3 class="card__tittle">
+                        I спогади i мрії
+                      </h3>
+                      <img
+                        class="card__decor"
+                        src="images/ivents/Rectangle.png"
+                        alt="Rectangle"
+                      >
+                    </div>
+                    <p class="card__description card__description--second">
+                      Національний художній музей України до 100 річчя від дня народження
+                      видатної української художниці  Тетяни Яблонської  відкриває
+                      ретроспективну ювілейну виставку «І спогади i мрії».
+                    </p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="lection" id="lection">
+          <div class="lection__content">
+            <article class="lection__card">
+              <div class="lection__info">
+                <p class="lection__description">ЛЕКЦІЯ</p>
+                <p class="lection__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="lection__tittle">Від класицизму до романтизму</h3>
+            </article>
+          </div>
+        </section>
+
+        <section class="galery" id="galery">
+          <div class="container">
+            <div class="wrapper">
+              <h2 class="galery__tittle">Галерея</h2>
+              <div class="galery__content">
+                <img
+                  src="images/galery/photo-1.jpg"
+                  alt="Photo"
+                  class="galery__photo"
+                >
+                <img
+                  src="images/galery/phtoto-2.jpg"
+                  alt="Photo"
+                  class="galery__photo"
+                >
+                <img
+                  src="images/galery/phtoto-2.jpg"
+                  alt="Photo"
+                  class="galery__photo"
+                >
+              </div>
+
+              <div class="galery__item">
+                <img
+                  src="images/galery/photo-grid-1.jpg"
+                  alt="Photo"
+                  class="galery__img-grid galery__img-grid--one"
+                >
+
+                <img
+                  src="images/galery/photo-grid-2.jpg"
+                  alt="Photo"
+                  class="galery__img-grid"
+                >
+
+                <img
+                  src="images/galery/photo-grid-3.jpg"
+                  alt="Photo"
+                  class="galery__img-grid"
+                >
+
+                <img
+                  src="images/galery/photo-grid-4.jpg"
+                  alt="Photo"
+                  class="galery__img-grid--one"
+                >
+              </div>
+
+              <div class="galery__slider slider">
+                <div class="slider__dot slider__dot--active"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="subscribe" id="subscribe">
+          <div class="container">
+            <div class="wrapper">
+              <div class="subscribe__content">
+                <h2 class="subscribe__tittle">Підписка</h2>
+                <p class="subscribe__subtittle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+                <form class="subscribe__form form" onsubmit="this.reset(); return false;">
+                  <label class="form__label" for="email">
+                    <input
+                      type="email"
+                      class="form__input"
+                      required
+                      placeholder="E-mail"
+                    >
+                    <button class="form__button">
+                      <img
+                        class="form__img"
+                        src="images/subscribe/arrow.png"
+                        alt="arrow"
+                      >
+                    </button>
+                  </label>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer" id="contucts">
+      <div class="container">
+        <div class="wrapper">
+          <div class="footer__content">
+            <div class="top-part">
+              <a href="#" class="top-part__logo">NA <br> MU</a>
+              <div class="top-part__icon">
+                <a
+                  href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.facebook.com/facebook/"
+                  class="top-part__icon--link"
+                  target="_blank"
+                ></a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="top-part__icon--link top-part__icon--link-instagram"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+
+            <div class="midlle-part">
+              <div class="midlle-part__right">
+                <p class="midlle-part__tittle">Графік роботи</p>
+                <ul class="midlle-part__schedual schedual">
+                  <li class="midlle-part__time">12:00 — 20:00 <span class="schedual__day">середа</span> </li>
+                  <li class="midlle-part__time">12:00 — 20:00 <span class="schedual__day">четвер</span> </li>
+                  <li class="midlle-part__time">12:00 — 20:00 <span class="schedual__day">п’ятниця</span></li>
+                  <li class="midlle-part__time">11:00 — 19:00 <span class="schedual__day">субота</span> </li>
+                  <li class="midlle-part__time">11:00 — 19:00 <span class="schedual__day">неділя</span> </li>
+                </ul>
+                <p class="midlle-part__subttitle">
+                  Вихідні понеділок, вівторок
+                  <br> Kaca припиняє роботу за 1 годину
+                  <br> до закриття музею
+                </p>
+              </div>
+              <div class="midlle-part__left">
+                <p class="midlle-part__tittle">Контакти:</p>
+                <div class="midlle-part__contacts">
+                  <a
+                    href="https://goo.gl/maps/4D3C4MMwGL1tGH4TA"
+                    class="midlle-part__adress"
+                    target="_blank"
+                  >
+                    вул. M. Грушевського, 6; Київ, 01001
+                  </a>
+                  <a href="tel:+380442781357" class="midlle-part__adress">
+                      тел. +38 (044) 278-13-57
+                  </a>
+                  <a href="tel:+380442781357" class="midlle-part__adress">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <a
+                    href="#"
+                    class="midlle-part__adress"
+                    target="_blank"
+                  >
+                      e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+              <a href="#" class="midlle-part__button"></a>
+            </div>
+            <hr class="footer__horison-line">
+
+            <hr class="footer__line">
+
+            <nav class="fooetr__links links">
+              <ol class="links__content">
+                <ul class="links__list">
+                  <li class="links__item">
+                    <a class="links__link" href="#galery">Галерея</a>
+                  </li>
+                  <li class="links__item">
+                    <a class="links__link" href="#lection">Виставки та події</a>
+                  </li>
+                </ul>
+                <ul class="links__list links__list--second">
+                  <li class="links__item">
+                    <a class="links__link" href="#subscribe">Про Hac</a>
+                  </li>
+                  <li class="links__item">
+                    <a class="links__link" href="#contucts">Контакти</a>
+                  </li>
+                </ul>
+              </ol>
+            </nav>
+          </div>
+
+          <div class="footer__tittle">
+            <p class="footer__subtittle footer__subtittle--one">Designed by Zhyriada Marina</p>
+            <p class="footer__subtittle">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
