--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="header__bottom">
+      <div class="header__bottom">
+        <div class="container">
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <div class="tickets header__tickets">
             <p class="tickets__main">квитки</p>
@@ -43,7 +43,6 @@
               >
             </button>
           </div>
-          <h2 class="section-title header__title" id="actions">Актуальні події</h2>
         </div>
       </div>
 
@@ -54,6 +53,7 @@
               <a href="#" class="menu-header__close"></a>
 
               <section class="menu">
+                <h2 class="visually-hidden">Меню</h2>
                 <div class="menu__content menu__content--header">
                   <div class="menu__box">
                     <a href="#gallery" class="menu__item menu__item--header">Галерея</a>
@@ -98,7 +98,11 @@
     </header>
 
     <main class="main">
-      <section class="actions" >
+      <section class="actions">
+        <div class="container">
+          <h2 class="section-title main__title" id="actions">Актуальні події</h2>
+        </div>
+
         <article class="actions__item">
           <div class="container">
             <img
@@ -242,13 +246,13 @@
                 >
               </button>
             </div>
-
-            </button>
           </form>
         </div>
       </section>
 
       <section class="schedule main__schedule" id="schedule">
+        <h2 class="visually-hidden">Росклад роботи</h2>
+
         <div class="container">
           <div class="schedule__content">
             <div class="schedule__header">
@@ -320,14 +324,14 @@
               </a>
 
               <a
-                href="tel:+38 (044) 278-13-57"
+                href="tel:+38(044)278-13-57"
                 target="_blank"
                 class="schedule__text schedule__text--link"
               >
                 тел. +38 (044) 278-13-57
               </a>
               <a
-                href="tel:+38 (044) 278-13-57"
+                href="tel:+38(044)278-13-57"
                 target="_blank"
                 class="schedule__text schedule__text--link"
               >
@@ -344,30 +348,15 @@
             </div>
 
             <a href="#" class="schedule__btn">
-              <svg
-                width="50"
-                height="50"
-                viewBox="0 0 50 50"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle
-                  cx="25"
-                  cy="25"
-                  r="24.5"
-                  class="schedule__svg"
-                ></circle>
-                <path
-                  d="M25 19L20 24L20.705 24.705L24.5 20.915V31H25.5V20.915L29.295 24.705L30 24L25 19Z"
-                  class="schedule__svg"
-                 ></path>
-              </svg>
+              <img src="./images/icons/arrow-up.svg" alt="наверх">
             </a>
           </div>
         </div>
       </section>
 
       <section class="menu">
+        <h2 class="visually-hidden">Меню</h2>
+
         <div class="container">
           <div class="menu__content">
             <div class="menu__box">
@@ -391,3 +380,4 @@
     </footer>
   </body>
 </html>
+
