--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
 
           <article class="events__article">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</article>
         </div>
+
         <div class="events__memories-and-dreams  ">
           <img
             src="./images/memories-and-dreams.png"
@@ -79,9 +80,149 @@
           <article class="events__article">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</article>
         </div>
       </section>
+
+      <section class="classicism-romanticism section">
+        <div class="classicism-romanticism__bg"></div>
+
+        <div class="classicism-romanticism__lecture">
+          <div class="classicism-romanticism__inform">
+            <span>ЛЕКЦІЯ</span>
+            <span class="classicism-romanticism__date">26/08/2019 - 11:00</span>
+          </div>
+
+          <h3 class="classicism-romanticism__title">Від класицизму до романтизму</h3>
+        </div>
+
+      </section>
+
+      <section class="gallery section">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <div class="gallery__carousel">
+          <img
+            class="gallery__slide"
+            src="./images/gallery-1.png"
+            alt="gallery-1"
+            id="gallery-1"
+          >
+
+          <img
+            class="gallery__slide"
+            src="./images/gallery-2.png"
+            alt="gallery-2"
+            id="gallery-2"
+          >
+
+          <img
+            class="gallery__slide"
+            src="./images/gallery-3.png"
+            alt="gallery-3"
+            id="gallery-3"
+          >
+
+          <img
+            class="gallery__slide"
+            src="./images/gallery-4.png"
+            alt="gallery-4"
+            id="gallery-4"
+          >
+        </div>
+
+        <div class="gallery__btns">
+          <a href="#gallery-1" class="gallery__btn"></a>
+          <a href="#gallery-2" class="gallery__btn"></a>
+          <a href="#gallery-3" class="gallery__btn"></a>
+          <a href="#gallery-4" class="gallery__btn"></a>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+        <article class="subscription__article">
+          Бути в курсі всіх актуальних <br> подій та останніх новин.
+        </article>
+
+        <div class="subscription__button">
+          <input
+            type="email"
+            class="subscription__input"
+            placeholder="E-mail"
+          >
+          <div class="subscription__button-square">
+            <img
+              src="./images/button-arrow-black.png"
+              alt="arrow"
+              class="subscription__button-arrow"
+            >
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer section">
+      <div class="footer__top">
+        <a href="#" class="footer__logo"></a>
+
+        <div class="footer__icons">
+          <a href="#" class="icon facebook-icon"></a>
+          <a href="#" class="icon insta-icon"></a>
+        </div>
+      </div>
+
+      <div class="footer__inform">
+        <div class="footer__schedule">
+          <article class="footer__title">Графік роботи</article>
+          <article class="footer__times">
+            <span class="footer__time">12:00 — 20:00</span> середа
+            <span class="footer__time">12:00 — 20:00</span> четвер
+            <span class="footer__time">12:00 — 20:00</span> п’ятниця
+            <span class="footer__time">11:00 — 19:00</span> субота
+            <span class="footer__time">11:00 — 19:00</span> неділя
+
+            <article class="footer__weekends">
+              Вихідні понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </article>
+          </article>
+        </div>
+
+        <div class="footer__contacts">
+          <article class="footer__title">Контакти:</article>
+          <article class="footer__address">
+            вул. М. Грушевського, 6; Київ, 01001 <br>
+            тел. +38 (044) 278-13-57 <br>
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua
+          </article>
+        </div>
+      </div>
+
+      <div class="footer__arrow-border">
+        <a
+          href="#"
+          class="footer__arrow-up"
+        ></a>
+      </div>
+
+      <hr class="footer__line">
+
+      <div class="footer__inform">
+        <div class="footer__links">
+          <a href="#" class="footer__link">Галерея</a>
+          <a href="#" class="footer__link">Виставки та події</a>
+        </div>
+        <div class="footer__links">
+          <a href="#" class="footer__link">Про Нас</a>
+          <a href="#" class="footer__link">Контакти</a>
+        </div>
+      </div>
+
+      <div class="footer__copyright">
+        <span class="footer__copy">Designed by Zhyriada Marina</span>
+        <span class="footer__copy">Copyright © 2019. All Rights Reserved.</span>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
