--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header page__header">
 
       <div class="header__top">
 
@@ -106,52 +106,198 @@
     <main class="main">
       <section class="actions" id="actions">
 
-        <h2 class="actions__title">Актуальні події</h2>
+        <div class="actions__exibitions">
 
-        <div class="actions__container">
+          <h2 class="actions__title">Актуальні події</h2>
 
-          <article class="exibition">
+          <div class="actions__container">
 
-            <img src="images/exibition-1.png" alt="ВИСТАВКА 1" class="exibition__photo">
+            <article class="exibition">
 
-            <div class="exibition__text">
+              <img src="images/exibition-1.png" alt="ВИСТАВКА 1" class="exibition__photo">
 
-              <div class="exibition__info">
-                <p class="exibition__name">ВИСТАВКА</p>
-                <p class="exibition__date">26.08-29.11.2019</p>
+              <div class="exibition__text">
+
+                <div class="exibition__info">
+                  <p class="exibition__name">ВИСТАВКА</p>
+                  <p class="exibition__date">26.08-29.11.2019</p>
+                </div>
+
+                <h3 class="exibition__title">Йду і повертаюсь</h3>
+
+                <p class="exibition__add-info">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
               </div>
 
-              <h3 class="exibition__title">Йду і повертаюсь</h3>
+            </article>
+            <article class="exibition">
+              <img src="images/exibition-2.png" alt="ВИСТАВКА 1" class="exibition__photo">
 
-              <p class="exibition__add-info">
-                Національний Художній Музей України презентує унікальну
-                частину колекції Градобанку - українське мистецтво другої
-                половини 1980-1995 років.
-              </p>
-            </div>
+              <div class="exibition__text">
 
-          </article>
-          <article class="exibition">
-            <img src="images/exibition-2.png" alt="ВИСТАВКА 1" class="exibition__photo">
+                <div class="exibition__info">
+                  <p class="exibition__name">ВИСТАВКА</p>
+                  <p class="exibition__date">26.08-29.11.2019</p>
+                </div>
 
-            <div class="exibition__text">
+                <h3 class="exibition__title">І спогади і мрії</h3>
 
-              <div class="exibition__info">
-                <p class="exibition__name">ВИСТАВКА</p>
-                <p class="exibition__date">26.08-29.11.2019</p>
+                <p class="exibition__add-info">
+                  Національний художній музей України до 100 річчя
+                  від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну
+                  виставку «І спогади і мрії».
+                </p>
               </div>
-
-              <h3 class="exibition__title">І спогади і мрії</h3>
-
-              <p class="exibition__add-info">
-                Національний художній музей України до 100 річчя
-                від дня народження видатної української художниці
-                Тетяни Яблонської відкриває ретроспективну ювілейну
-                виставку «І спогади і мрії».
-              </p>
-            </div>
-          </article>
+            </article>
+          </div>
         </div>
+
+        <div class="actions__lectures">
+          <div class="lecture">
+            <div class="lecture__card">
+
+              <div class="lecture__info">
+                <p class="lecture__name">ЛЕКЦІЯ</p>
+                <p class="lecture__date">26/08/2019 - 11:00</p>
+              </div>
+
+              <h3 class="lecture__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="galery page__galery" id="galery">
+        <h2 class="galery__title">Галерея</h2>
+
+        <ul class="slides">
+          <input
+            class="slides__input"
+            type="radio"
+            name="radio-btn"
+            id="img-1"
+            checked
+          >
+          <li class="slides__container">
+            <div class="slides__slide">
+              <img
+                class="slides__img"
+                src="images/slider.jpeg"
+                alt="-"
+              >
+            </div>
+            <div class="nav">
+              <label for="img-4" class="prev">&#x2039;</label>
+              <label for="img-2" class="next">&#x203a;</label>
+            </div>
+          </li>
+
+          <input
+            class="slides__input"
+            type="radio"
+            name="radio-btn"
+            id="img-2"
+            checked
+          >
+          <li class="slides__container">
+            <div class="slides__slide">
+              <img
+                class="slides__img"
+                src="images/slider-2.jpeg"
+                alt="-"
+              >
+            </div>
+            <div class="nav">
+              <label for="img-1" class="prev">&#x2039;</label>
+              <label for="img-3" class="next">&#x203a;</label>
+            </div>
+          </li>
+
+          <input
+            class="slides__input"
+            type="radio"
+            name="radio-btn"
+            id="img-3"
+            checked
+          >
+          <li class="slides__container">
+            <div class="slides__slide">
+              <img
+                class="slides__img"
+                src="images/slider-3.jpeg"
+                alt="-"
+              >
+            </div>
+            <div class="nav">
+              <label for="img-2" class="prev">&#x2039;</label>
+              <label for="img-4" class="next">&#x203a;</label>
+            </div>
+          </li>
+
+          <input
+            class="slides__input"
+            type="radio"
+            name="radio-btn"
+            id="img-4"
+            checked
+          >
+          <li class="slides__container">
+            <div class="slides__slide">
+              <img
+                class="slides__img"
+                src="images/slider-4.jpeg"
+                alt="-"
+              >
+            </div>
+            <div class="nav">
+              <label for="img-3" class="prev">&#x2039;</label>
+              <label for="img-1" class="next">&#x203a;</label>
+            </div>
+          </li>
+
+          <li class="nav-dots">
+            <label for="img-1" class="nav-dot" id="img-dot-1"></label>
+            <label for="img-2" class="nav-dot" id="img-dot-2"></label>
+            <label for="img-3" class="nav-dot" id="img-dot-3"></label>
+            <label for="img-4" class="nav-dot" id="img-dot-4"></label>
+          </li>
+        </ul>
+
+        <div class="galery__desktop">
+          <img class="galery__images galery__images--1" src="images/slider.jpeg" alt="-">
+          <img class="galery__images galery__images--2" src="images/slider-2.jpeg" alt="-">
+          <img class="galery__images galery__images--3" src="images/slider-3.jpeg" alt="-">
+          <img class="galery__images galery__images--4" src="images/slider-4.jpeg" alt="-">
+        </div>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+
+        <p class="subscribe__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <form
+          action="https://youtube.com"
+          class="form"
+          method="post"
+        >
+
+          <div class="form__container">
+
+            <label>
+              <input
+              type="email"
+              class="form__input"
+              name="user-email"
+              placeholder="E-mail"
+            >
+            </label>
+
+            <button class="form__button"></button>
+          </div>
+        </form>
       </section>
     </main>
 
