--- a/src/index.html
+++ b/src/index.html
@@ -66,12 +66,11 @@
               src="./images/event/event1.png"
               alt="event1">
             <div class="event__content">
-              <h4 class="event__type">ВИСТАВКА
+              <div class="event__type">ВИСТАВКА
                 <p class="event__date">26.08-29.11.2019</p>
-              </h4>
+              </div>
               <h3 class="event__title">
                 Йду і повертаюсь
-                <div class="square"></div>
               </h3>
               <p class="event__description">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -84,12 +83,11 @@
             src="./images/event/event2.png"
             alt="event1">
             <div class="event__content">
-              <h4 class="event__type">ВИСТАВКА
+              <div class="event__type">ВИСТАВКА
                 <p class="event__date">26.08-29.11.2019</p>
-              </h4>
+              </div>
               <h3 class="event__title">
                 І спогади і мрії
-                <div class="square"></div>
               </h3>
               <p class="event__description">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
@@ -179,12 +177,12 @@
           <a href="#" class="logo">NA<br>MU</a>
           <div class="socials__content">
             <a
-              href="facebook"
+              href="https://www.facebook.com/namu.museum/"
               class="socials__link socials__link--facebook"
               target="_blank">
             </a>
             <a
-              href="instagram"
+              href="https://www.instagram.com/stories/namu.museum/"
               class="socials__link socials__link--instagram"
               target="_blank">
             </a>
@@ -206,7 +204,7 @@
 
         <div class="footer__summary summary">
           <h3 class="summary__title">Контакти:</h3>
-          <a class="summary--regular on-hover-link" href="#">вул. М. Грушевського, 6; Київ, 01001</a><br>
+          <a class="summary--regular on-hover-link" href="https://maps.app.goo.gl/YFUruMcHscTmBeuu7">вул. М. Грушевського, 6; Київ, 01001</a><br>
           <a class="summary--regular on-hover-link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
           <a class="summary--regular on-hover-link" href="tel:+380442787454">факс +38 (044) 278-74-54</a><br>
           <a class="summary--regular on-hover-link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
