--- a/src/index.html
+++ b/src/index.html
@@ -310,8 +310,8 @@
         </a>
 
         <div class="footer__socials">
-          <a href="#" class="icon icon--facebook"></a>
-          <a href="#" class="icon icon--instagram"></a>
+          <a href="https://www.facebook.com/UkrainianMuseum/" class="icon icon--facebook"></a>
+          <a href="https://www.instagram.com/museumsofukraine/" class="icon icon--instagram"></a>
         </div>
       </div>
 
@@ -350,10 +350,10 @@
       <div class="contacts footer__contacts" id="contacts">
         <h3 class="contacts__title">Контакти:</h3>
         <p class="contacts__info">
-          вул. М. Грушевського, 6; Київ, 01001
-          тел. +38 (044) 278-13-57
-          факс +38 (044) 278-74-54
-          e-mail: info@namu.kiev.ua
+          <a class="contacts__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494431,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu">вул. М. Грушевського, 6; Київ, 01001 </a>
+          <a class="contacts__link" href="tel:+380442781357">тел. +38 (044) 278-13-57 </a>
+          <a class="contacts__link" href="fax:+380442787454">факс +38 (044) 278-74-54</a>
+          <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
         </p>
       </div>
 
@@ -374,7 +374,7 @@
         </div>
       </div>
       <div class="footer__bottom">
-        <p class="footer__bottom--left">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__bottom--left">Copyright © 2023. All Rights Reserved.</p>
         <p class="footer__bottom--right">Designed by Zhyriada Marina</p>
       </div>
 
